# uw-rss-bot

./: .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.fly  README.md  fly.toml
src/: main.rs
