[package]
name = "rust-rss-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.31"
chrono-tz = "0.8.5"
dotenv = "0.15.0"
html-escape = "0.2.13"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"] }
rss = "2.0.7"
rusqlite = "0.30.0"
rustls = "0.22.2"
serde = { version = "1.0.195", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full", "rt-multi-thread"]}
